[gd_scene load_steps=3 format=2]

[ext_resource path="res://images/BGs/Welcome_BG.png" type="Texture" id=1]
[ext_resource path="res://scripts/Welcome.gd" type="Script" id=2]

[node name="Welcome" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 4, 4 )
z_index = -1
texture = ExtResource( 1 )

[node name="NewGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 468.5
margin_top = 300.0
margin_right = 571.5
margin_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 40 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 468.5
margin_top = 380.0
margin_right = 571.5
margin_bottom = 430.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 40 )
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 468.5
margin_top = 460.0
margin_right = 571.5
margin_bottom = 510.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 40 )
text = "Custom Game"
__meta__ = {
"_edit_use_anchors_": false
}
